<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:padding="@dimen/form_padding"
    android:gravity="center_horizontal"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/fragment_signup_name"
            android:hint="@string/name_field_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/fragment_signup_login"
            android:hint="@string/login_field_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/fragment_signup_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_field_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_input_top_margin">
        <EditText
            android:id="@+id/fragment_signup_password"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_input_top_margin">
        <EditText
            android:id="@+id/fragment_signup_confirm_password"
            android:hint="@string/password_confirm_field_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_signup_submit"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/form_input_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>