<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/small_padding">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_server_label" />
            <Spinner
                android:id="@+id/wifi_server"
                android:layout_marginTop="@dimen/form_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/wifi_login"
            android:maxLines="1"
            android:hint="@string/wifi_login_hint"
            android:layout_marginTop="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/wifi_password"
            android:hint="@string/wifi_password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/wifi_connect"
            style="@style/CalliopeGreenButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/form_input_top_margin"
            android:text="@string/connection"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wifi_disabled_frame"
        android:padding="@dimen/form_padding"
        android:background="#FFFFFF"
        android:visibility="invisible"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/ic_signal_wifi_off_black_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/wifi_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>