<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#CCCCCC"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#FFFFFF"
        android:layout_margin="8dp"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/data_icon"
                android:src="@drawable/ic_settings_applications_black_48dp"
                android:layout_marginRight="@dimen/small_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/data_form_name"
                    android:hint="@string/name_field_hint"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/data_form_code"
                    android:layout_below="@+id/data_form_name"
                    android:hint="@string/code_field_hint"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/data_form_save"
            style="@style/CalliopeGreenButton"
            android:textAllCaps="true"
            android:text="@string/save_data"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_data_list"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>